--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,10 @@
 1. Create a like/dislike system
     - increment/ animate on client side
     - Send the increment/decrement to the server
+
+
+    Outside of asthetics, This wont be completely necessary with the current structure
+
 2. Implement pagination
     - query start:at where the previous query ended
     - Using server, for any category load the top 50 posts (Increase the load as it goes)
